# Ott-Lang-ITA24

./: .gitignore  CMakeLists.txt  README.md  test.cott  test.ott
include/: ast.hpp  bytecode.hpp  compiler.hpp  debug.hpp  expr.hpp  lexer.hpp  parser.hpp  runtime.hpp  tokens.hpp
src/: CMakeLists.txt  ast.cpp  compiler.cpp  debug.cpp  lexer.cpp  ott.cpp  ottd.cpp  parser.cpp  runtime.cpp  tokens.cpp
src/compiler/: CMakeLists.txt  main.cpp
src/compiler/ast/: ast.hpp  expr.hpp  stmt.hpp
src/compiler/environment/: CMakeLists.txt  environment.cpp  environment.hpp
src/compiler/pipeline/: CMakeLists.txt
src/compiler/pipeline/parser/: CMakeLists.txt  expr.cpp  parser.cpp  parser.hpp  stmt.cpp
src/compiler/pipeline/scanner/: CMakeLists.txt  scanner.cpp  scanner.hpp
src/compiler/token/: CMakeLists.txt  token.cpp  token.hpp
